ecosystem/kubernetes-manifests/number-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: number-service
  labels:
    app: number-service
spec:
  selector:
    matchLabels:
      app: number-service
  replicas: 1
  template:
    metadata:
      labels:
        app: number-service
    spec:
      containers:
        - name: number-service
          image: ecosystem/number-service
          imagePullPolicy: Never
          ports:
            - containerPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: number-service-svc
spec:
  selector:
    app: number-service
  ports:
    - port: 80
      targetPort: 9091
  type: ClusterIP
