ecosystem/kubernetes-manifests/ecosystem.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: number-service
    servicePort: 9091
