ecosystem/kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ecosystem-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - secretName: tls-secret
  rules:
    - http:
        paths:
          - path: /users-service
            backend:
              serviceName: user-service-svc
              servicePort: 9092
          - path: /number-service
            backend:
              serviceName: number-service-svc
              servicePort: 9091
